--- a/src/app/styles/common/_header.scss
+++ b/src/app/styles/common/_header.scss
@@ -7,11 +7,39 @@
   &-search {
     grid-area: 1 / 1 / 2 / 2;
     justify-self: start;
+    align-self: center;
+
+    ul {
+      display: flex;
+      gap: 16px;
+
+      li:first-child {
+        color: $brand-primary;
+      }
+
+      i[class*='fa-'] {
+        font-size: 24px;
+      }
+    }
+  }
+
+  &-contact {
+    ul {
+      display: flex;
+      gap: 16px;
+    }
   }
 
   &-controls {
     grid-area: 1 / 2 / 2 / 3;
     justify-self: end;
+    align-self: center;
+
+    ul {
+      i[class*='fa-'] {
+        font-size: 24px;
+      }
+    }
   }
 
   &-logo {
@@ -20,7 +48,37 @@
     text-align: center;
 
     img {
-      max-width: 80px;
+      max-width: 128px;
+    }
+
+    @include media-breakpoint-up(lg) {
+      grid-row: 2 / 3;
+    }
+  }
+
+  &-primary {
+    .nav-primary {
+      ul {
+        display: flex;
+        gap: 16px;
+        justify-content: center;
+      }
+
+      a {
+        display: block;
+        padding: 8px 16px;
+        font-weight: 300;
+        line-height: 24px;
+        font-size: 20px;
+        text-transform: uppercase;
+        border-radius: 24px;
+        transition: color 0.2s linear, background-color 0.4s ease-in-out;
+
+        &:hover {
+          background: $brand-primary;
+          color: $white;
+        }
+      }
     }
   }
 }
