--- a/src/app/styles/common/_footer.scss
+++ b/src/app/styles/common/_footer.scss
@@ -3,6 +3,7 @@
     background: $main-bg;
     color: $gray-tertiary;
     padding: 50px 0;
+    font-weight: 300;
 
     &-inner {
       display: grid;
@@ -25,6 +26,7 @@
     display: flex;
     flex-wrap: wrap;
     row-gap: 50px;
+    text-transform: uppercase;
 
     ul {
       width: 50%;
@@ -34,8 +36,7 @@
       flex-wrap: nowrap;
       row-gap: initial;
       column-gap: 60px;
-      display: grid;
-      grid-template: 1fr / repeat(4, 1fr) 477px;
+      display: flex;
 
       ul {
         width: auto;
@@ -45,15 +46,62 @@
 
   &-contact {
     grid-area: contact;
+
+    h1 {
+      font-size: 16px;
+      line-height: 18px;
+      text-transform: uppercase;
+      font-weight: inherit;
+
+      span {
+        font-weight: 400;
+      }
+    }
+
+    p {
+      display: flex;
+      flex-direction: column;
+      font-size: 14px;
+      line-height: 18px;
+
+      span:last-child {
+        color: $brand-primary;
+      }
+    }
   }
 
   &-connect {
     grid-area: connect;
     justify-self: center;
 
+    ul {
+      display: flex;
+      gap: 30px;
+      text-transform: uppercase;
+      font-size: 14px;
+
+      i[class*='fa-'] {
+        display: block;
+        font-size: 40px;
+        color: $brand-primary;
+        text-align: center;
+        margin-bottom: 10px;
+      }
+    }
+
     @include media-breakpoint-up(lg) {
       justify-self: start;
       align-self: center;
+    }
+  }
+
+  &-secondary {
+    text-align: center;
+    color: $gray-primary;
+
+    p:first-child {
+      font-size: 14px;
+      line-height: 18px;
     }
   }
 }
