--- a/src/app/styles/common/_header.scss
+++ b/src/app/styles/common/_header.scss
@@ -26,7 +26,14 @@
   &-contact {
     ul {
       display: flex;
+      align-items: center;
       gap: 16px;
+
+      i[class*='fa-'] {
+        margin-right: 16px;
+        color: $brand-primary;
+        font-size: 24px;
+      }
     }
   }
 
@@ -39,6 +46,18 @@
       i[class*='fa-'] {
         font-size: 24px;
       }
+
+      .cart-quantity {
+        width: 16px;
+        height: 16px;
+        background: $brand-primary;
+        border-radius: 50%;
+        position: absolute;
+        top: -6px;
+        right: -6px;
+        color: $white;
+        font-size: 12px;
+      }
     }
   }
 
@@ -48,11 +67,14 @@
     text-align: center;
 
     img {
-      max-width: 128px;
+      width: 88px;
     }
 
     @include media-breakpoint-up(lg) {
       grid-row: 2 / 3;
+      img {
+        width: 180px;
+      }
     }
   }
 
@@ -77,6 +99,27 @@
         &:hover {
           background: $brand-primary;
           color: $white;
+        }
+      }
+    }
+
+    .nav-secondary {
+      ul {
+        display: flex;
+        gap: 36px;
+        justify-content: center;
+
+        a {
+          display: block;
+          font-weight: 400;
+          line-height: 18px;
+          font-size: 16px;
+          text-transform: uppercase;
+          transition: color 0.2s linear;
+
+          &:hover {
+            color: $brand-primary;
+          }
         }
       }
     }
