--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,3 +1,6 @@
+// fonts
+@import './styles/fonts';
+
 // relative path to node_modules via sass
 @import './../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss';
 @import './../../node_modules/@fortawesome/fontawesome-free/scss/brands.scss';
@@ -10,21 +13,23 @@
 @import '~bootstrap/scss/bootstrap-grid';
 @import '~bootstrap/scss/bootstrap-utilities';
 
-//fonts
-@import './styles/fonts';
-
-//variables
 @import './styles/variables';
 
 // ui
 @import './styles/ui/index';
 
-//common site components
+// common site components
 @import './styles/common/index';
+
+// home page components
+@import './styles/home/index';
+
+// catalog components
+@import './styles/catalog/index';
 
 body {
   font-size: 16px;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   color: $gray-primary;
 }
 
@@ -46,8 +51,8 @@ ol {
 }
 
 *,
-*::before,
-*::after {
+*::after,
+*::before {
   padding: 0;
   margin: 0;
 }
