--- a/src/app/styles/catalog/_product-tile.scss
+++ b/src/app/styles/catalog/_product-tile.scss
@@ -1,10 +1,61 @@
 .product-tile {
   text-align: center;
+  font-weight: 300;
 
   &-header {
+    color: $gray-primary;
+    font-weight: inherit;
+    margin-bottom: 20px;
+
     img {
       max-width: 100%;
       width: 100%;
+    }
+
+    .badge {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+    }
+
+    h1 {
+      font-size: 24px;
+      font-weight: inherit;
+      margin-top: 28px;
+
+      span {
+        font-weight: 500;
+      }
+
+      span:first-child {
+        color: $black;
+      }
+    }
+
+    h2 {
+      font-size: 18px;
+      font-weight: inherit;
+      margin: 0;
+    }
+  }
+
+  &-content {
+    margin-bottom: 20px;
+
+    .product-catalog-price {
+      font-size: 18px;
+      text-decoration: line-through;
+    }
+
+    .product-price {
+      display: block;
+      text-transform: uppercase;
+      font-size: 24px;
+
+      span {
+        font-weight: 500;
+        color: $brand-primary;
+      }
     }
   }
 }
