--- a/src/app/styles/common/_footer.scss
+++ b/src/app/styles/common/_footer.scss
@@ -7,9 +7,12 @@
 
     &-inner {
       display: grid;
+      padding-top: 48px;
+      padding-bottom: 48px;
 
       @include media-breakpoint-up(lg) {
-        padding: 50px 0 34px 0;
+        padding-top: 48px;
+        padding-bottom: 34px;
         background: $main-bg no-repeat right
           url('./../../../../public/images/banners/banner-06.jpg');
       }
