--- a/src/app/styles/home/_home-newsletter.scss
+++ b/src/app/styles/home/_home-newsletter.scss
@@ -29,6 +29,7 @@
       border-bottom: 2px solid $white;
       width: 75%;
       text-align: center;
+      outline: none;
     }
 
     button[type='submit'] {
